--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "react-dom": "18.2.0",
     "react-typed": "^2.0.9",
     "swiper": "^11.0.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7"
   }
 }
